--- a/app/package.json
+++ b/app/package.json
@@ -39,8 +39,8 @@
     "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typescript": "5.0.4",
     "webpack": "^5.87.0",
-    "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.9.2"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "axios": "^1.4.0",
