--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -8,9 +8,6 @@
       "app": [
         "./src/app"
       ],
-      "processes/*": [
-        "./src/processes/*"
-      ],
       "pages/*": [
         "./src/pages/*"
       ],
@@ -28,30 +25,25 @@
       ]
     },
 
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "module": "ESNext",
+    "module": "es6",
+    "target": "es6",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "skipLibCheck": true,
 
     /* Bundler mode */
+    "pretty": true,
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "esModuleInterop": false,
-    "pretty": true,
 
     /* Linting */
     "strict": true,
+    "allowJs": true,
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
 
-  "downlevelIteration": true,
   "noImplicitReturns": true,
   "strictNullChecks": true,
 
