--- a/app/package.json
+++ b/app/package.json
@@ -3,18 +3,12 @@
   "version": "2.0.0",
   "author": "Victor Kasap",
   "license": "ISC",
-  "scripts": {
-    "server": "NODE_ENV=development webpack serve",
-    "build-dev": "webpack --mode development",
-    "watch": "NODE_ENV=development webpack"
-  },
   "devDependencies": {
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
     "autoprefixer": "^10.4.14",
     "css-loader": "^6.8.1",
-    "dotenv": "^16.3.1",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard": "^17.1.0",
@@ -26,18 +20,13 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "html-webpack-plugin": "^5.5.3",
-    "mini-css-extract-plugin": "^2.7.6",
-    "node-sass": "^9.0.0",
     "postcss": "^8.4.24",
     "postcss-loader": "^7.3.3",
-    "postcss-preset-env": "^8.5.0",
     "prettier": "^2.8.8",
-    "sass": "^1.63.4",
-    "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.3",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
-    "typescript": "5.0.4",
+    "typescript": "^5.0.4",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
