--- a/app/package.json
+++ b/app/package.json
@@ -26,7 +26,7 @@
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.3",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
-    "typescript": "^5.0.4",
+    "typescript": "5.0.4",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
