upd: Updated Docker config

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,27 +1,12 @@
-app/.parcel-cache/
-
 app/node_modules/
-
-app/dist/
-
 docker-compose.yml
-
 Dockerfile
-
-.dockerignore
-
-.gitignore
-
-**/.DS_Store
-
 README.md
-
+.dockerignore
+.gitignore
+.DS_Store
 .idea/
-
+.vscode/
 .git/
-
-.env
-
 *.dist
 
-.vscode/
