--- a/app/Makefile
+++ b/app/Makefile
@@ -1,28 +1,40 @@
+# include .env - можно брать настройки из .env файла, к переменным обращаться так же $(VARIABLE)
 include .env
 
-install:
-	npm ci || npm install
+# HOST := 0.0.0.0
+# PORT := 4001
 
-start:
+# вызывает по умолчанию команду help.
+.PHONY: help
+
+help: ### Ignore - Show current help message
+	@echo "Available 🚀App commands:"
+	@grep -E '^[a-zA-Z_-]+:.*?🚀.*$$' ./Makefile | awk '!/## Ignore/' | \
+	awk 'BEGIN {FS = ":.*?## "}; {printf "make \033[32m%-30s\033[0m %s\n", $$1, $$2}'
+	@echo ""
+
+install-npm: ## 🚀App - Installs NPM Required NPM Packages for the App
+	npm install
+
+install-yarn: ## 🚀App - Installs YARN Required NPM Packages for the App
+	yarn install
+
+start: ## 🚀App - Starts the App Server in Development Mode
 	HOST=$(HOST) PORT=$(PORT_1) NODE_ENV=development npx webpack serve
 
-pretty:
-	npx prettier --write "src/**/*.{css,scss,js,ts}"
-
-lint:
-	npx eslint --fix src
-
-pre-commit: pretty lint
-
-build-prod:
-	NODE_ENV=production npx webpack --mode production
-
-build-dev:
+build-dev: ## 🚀App - Builds the App in Development Mode (Uncompressed Files)
 	NODE_ENV=development npx webpack --mode development
 
-watch:
-	NODE_ENV=development npx webpack --watch
+build-prod: pretty lint ## 🚀App - Builds the App in Production Mode (Compressed Files)
+	NODE_ENV=production npx webpack --mode production
 
-# for browser-sync
-browser:
+browser: ## 🚀App - Starts the App with Browser-Sync for Live Testing
 	npx browser-sync --watch --no-notify --host $(HOST) --port $(PORT_2) dist
+
+pretty: ## 🚀App - Make pretty files
+	npx prettier --write "src/**/*.{css,scss,js,ts}"
+
+lint: ## 🚀App - Check & Fix code
+	npx eslint --fix src
+
+pre-commit: pretty lint ## 🚀App - Check Pre commit code
