--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kit-webpack-assers",
+  "name": "kit-webpack-assets2",
   "version": "2.0.0",
   "author": "Victor Kasap",
   "license": "ISC",
