--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
     "autoprefixer": "^10.4.14",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
