--- a/app/package.json
+++ b/app/package.json
@@ -34,7 +34,8 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "swiper": "^9.4.1"
   },
   "browserslist": {
     "production": [
