--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -39,13 +39,10 @@
     "strict": true,
     "allowJs": true,
     "noImplicitAny": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
+    "strictNullChecks": true
   },
-
-  "noImplicitReturns": true,
-  "strictNullChecks": true,
 
   "include": ["src/**/*"],
   "exclude": ["node_modules", "public/**/*"]
