--- a/app/package.json
+++ b/app/package.json
@@ -30,11 +30,11 @@
     "typescript": "5.0.4",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "browser-sync": "^2.29.3"
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "normalize.css": "^8.0.1",
     "swiper": "^9.4.1"
   },
   "browserslist": {
